--- a/iSmartHome/ViewControllers/WeightResetViewController.xib
+++ b/iSmartHome/ViewControllers/WeightResetViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WeightResetViewController">
             <connections>
+                <outlet property="bigBlueCircleImg" destination="8tK-kv-ZIY" id="8o3-0h-YF8"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="weightResetBtn" destination="h5t-ke-qKO" id="OA1-FY-dxF"/>
                 <outlet property="weightResetView" destination="i5M-Pr-FkT" id="QTA-Dh-boz"/>
@@ -41,9 +42,9 @@
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="      为了测量的精确，请您先离座并点击清零键后进行称重。" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cyq-eS-SAh">
-                    <rect key="frame" x="108" y="347" width="198" height="82"/>
+                    <rect key="frame" x="112" y="347" width="190" height="82"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="198" id="3Rx-YQ-DcG"/>
+                        <constraint firstAttribute="width" constant="190" id="3Rx-YQ-DcG"/>
                         <constraint firstAttribute="height" constant="82" id="7bA-WA-PmX"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
