--- a/iSmartHome/ViewControllers/HealthConditionTrendencyViewController.xib
+++ b/iSmartHome/ViewControllers/HealthConditionTrendencyViewController.xib
@@ -7,6 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HealthConditionTrendencyViewController">
             <connections>
+                <outlet property="btnBackgroundView" destination="p3s-qH-cnq" id="bf3-Cu-cgH"/>
                 <outlet property="firstView" destination="bHC-kS-vze" id="OtX-vK-5D5"/>
                 <outlet property="monthBtn" destination="USX-Ro-gWL" id="smb-Jk-RJo"/>
                 <outlet property="pageControl" destination="RSL-RI-lSN" id="dsy-Jp-XBB"/>
@@ -24,7 +25,7 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_button_blue.png" translatesAutoresizingMaskIntoConstraints="NO" id="p3s-qH-cnq">
                     <rect key="frame" x="42" y="75" width="330" height="50"/>
                 </imageView>
-                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cyx-0o-eeP">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cyx-0o-eeP">
                     <rect key="frame" x="107" y="83" width="30" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <state key="normal" title="周">
@@ -34,8 +35,11 @@
                         <action selector="setXAxisToWeek:" destination="-1" eventType="touchUpInside" id="62S-u1-cKx"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="USX-Ro-gWL">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="USX-Ro-gWL">
                     <rect key="frame" x="192" y="85" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="WOK-hO-E2B"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <state key="normal" title="月">
                         <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -44,7 +48,7 @@
                         <action selector="setXAxisToMonth:" destination="-1" eventType="touchUpInside" id="JdY-Zi-D4K"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JYw-vV-LsG">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JYw-vV-LsG">
                     <rect key="frame" x="277" y="83" width="30" height="34"/>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <state key="normal" title="年">
@@ -54,20 +58,14 @@
                         <action selector="setXAxisToYear:" destination="-1" eventType="touchUpInside" id="cwZ-RW-2hf"/>
                     </connections>
                 </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bHC-kS-vze">
-                    <rect key="frame" x="0.0" y="135" width="414" height="224"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="224" id="ysf-eV-0nv"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rCd-Jt-9oN">
-                    <rect key="frame" x="0.0" y="369" width="414" height="274"/>
+                <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="bHC-kS-vze">
+                    <rect key="frame" x="0.0" y="130" width="414" height="250"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="RSL-RI-lSN">
                     <rect key="frame" x="57" y="683" width="300" height="43"/>
                     <constraints>
+                        <constraint firstAttribute="height" constant="43" id="8XT-Ii-Kzu"/>
                         <constraint firstAttribute="width" constant="300" id="bUC-WF-WzF"/>
                     </constraints>
                     <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -76,26 +74,37 @@
                         <action selector="pageChange:" destination="-1" eventType="valueChanged" id="YyF-sW-mdx"/>
                     </connections>
                 </pageControl>
+                <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="rCd-Jt-9oN">
+                    <rect key="frame" x="0.0" y="388" width="414" height="240"/>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="240" id="8yU-Zb-szL"/>
+                        <constraint firstAttribute="width" constant="414" id="jmA-su-bhn"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <gestureRecognizers/>
             <constraints>
+                <constraint firstItem="bHC-kS-vze" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="-113" id="2je-8i-ME2"/>
                 <constraint firstItem="p3s-qH-cnq" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="75" id="429-jb-gHG"/>
-                <constraint firstItem="rCd-Jt-9oN" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="6CB-M7-sTJ"/>
-                <constraint firstItem="bHC-kS-vze" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="7no-zy-qGA"/>
-                <constraint firstItem="rCd-Jt-9oN" firstAttribute="top" secondItem="bHC-kS-vze" secondAttribute="bottom" constant="10" id="8O5-w8-xPY"/>
-                <constraint firstItem="USX-Ro-gWL" firstAttribute="leading" secondItem="Cyx-0o-eeP" secondAttribute="trailing" constant="55" id="LFh-M8-JHe"/>
+                <constraint firstItem="bHC-kS-vze" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="8Eb-uA-j0z"/>
+                <constraint firstAttribute="trailing" secondItem="bHC-kS-vze" secondAttribute="trailing" id="D7I-76-hqR"/>
+                <constraint firstItem="JYw-vV-LsG" firstAttribute="leading" secondItem="USX-Ro-gWL" secondAttribute="trailing" constant="55" id="Ija-TI-lLS"/>
+                <constraint firstItem="USX-Ro-gWL" firstAttribute="centerY" secondItem="p3s-qH-cnq" secondAttribute="centerY" id="Lcx-aO-KR6"/>
+                <constraint firstItem="bHC-kS-vze" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="M8d-Ec-tlx"/>
+                <constraint firstItem="rCd-Jt-9oN" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Mzg-07-ct1"/>
                 <constraint firstAttribute="bottom" secondItem="RSL-RI-lSN" secondAttribute="bottom" constant="10" id="NR1-CM-0Ns"/>
-                <constraint firstItem="rCd-Jt-9oN" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="OyT-To-gBp"/>
-                <constraint firstAttribute="bottom" secondItem="rCd-Jt-9oN" secondAttribute="bottom" constant="93" id="T7N-rk-9XK"/>
-                <constraint firstItem="bHC-kS-vze" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Try-hI-9XC"/>
+                <constraint firstItem="USX-Ro-gWL" firstAttribute="leading" secondItem="Cyx-0o-eeP" secondAttribute="trailing" constant="55" id="Ncz-Mj-C8b"/>
                 <constraint firstItem="RSL-RI-lSN" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="U6n-sO-MUz"/>
-                <constraint firstItem="JYw-vV-LsG" firstAttribute="leading" secondItem="USX-Ro-gWL" secondAttribute="trailing" constant="55" id="UMz-lg-xOj"/>
-                <constraint firstItem="bHC-kS-vze" firstAttribute="top" secondItem="p3s-qH-cnq" secondAttribute="bottom" constant="10" id="Wgj-sl-7cB"/>
-                <constraint firstItem="USX-Ro-gWL" firstAttribute="centerY" secondItem="p3s-qH-cnq" secondAttribute="centerY" id="ah8-kJ-VAm"/>
-                <constraint firstItem="RSL-RI-lSN" firstAttribute="top" secondItem="rCd-Jt-9oN" secondAttribute="bottom" constant="40" id="iYc-2z-eTP"/>
-                <constraint firstItem="USX-Ro-gWL" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="uNx-cf-Av4"/>
+                <constraint firstItem="bHC-kS-vze" firstAttribute="top" secondItem="p3s-qH-cnq" secondAttribute="bottom" constant="5" id="UCU-fA-mEw"/>
+                <constraint firstAttribute="trailing" secondItem="rCd-Jt-9oN" secondAttribute="trailing" id="VfY-wv-BFS"/>
+                <constraint firstItem="rCd-Jt-9oN" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" constant="140" id="arM-7l-vPR"/>
+                <constraint firstItem="USX-Ro-gWL" firstAttribute="baseline" secondItem="JYw-vV-LsG" secondAttribute="baseline" id="eya-bU-Mh0"/>
+                <constraint firstItem="rCd-Jt-9oN" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="qU7-R1-6oh"/>
+                <constraint firstItem="USX-Ro-gWL" firstAttribute="centerX" secondItem="p3s-qH-cnq" secondAttribute="centerX" id="tcO-gT-17Z"/>
                 <constraint firstItem="p3s-qH-cnq" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="uc4-Vc-f2s"/>
+                <constraint firstItem="USX-Ro-gWL" firstAttribute="baseline" secondItem="Cyx-0o-eeP" secondAttribute="baseline" id="z4V-cn-DMt"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="312" y="61"/>
