--- a/iSmartHome/Base.lproj/Main.storyboard
+++ b/iSmartHome/Base.lproj/Main.storyboard
@@ -134,6 +134,9 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AUM-Zl-099">
                                 <rect key="frame" x="264" y="656" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="Nh6-Dg-m2U"/>
+                                </constraints>
                                 <state key="normal" title="Log in"/>
                                 <connections>
                                     <segue destination="Vd9-gv-BAI" kind="push" id="bZH-wz-D0m"/>
@@ -141,6 +144,9 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eAi-ec-tAD">
                                 <rect key="frame" x="189" y="656" width="37" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="37" id="TBG-aP-074"/>
+                                </constraints>
                                 <state key="normal" title="start!">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -176,7 +182,6 @@
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="4xn-H5-yr5" firstAttribute="top" secondItem="eAi-ec-tAD" secondAttribute="bottom" constant="50" id="6kI-Ha-Vnn"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="AUM-Zl-099" secondAttribute="trailing" constant="80" id="8AK-iH-aOG"/>
                             <constraint firstItem="f5n-fM-GTy" firstAttribute="leading" secondItem="EP7-Hc-rSS" secondAttribute="leadingMargin" constant="16" id="IX5-6D-djh"/>
                             <constraint firstItem="eAi-ec-tAD" firstAttribute="top" secondItem="f5n-fM-GTy" secondAttribute="bottom" constant="78" id="MsJ-Bu-i2b"/>
                             <constraint firstItem="4xn-H5-yr5" firstAttribute="top" secondItem="AUM-Zl-099" secondAttribute="bottom" constant="50" id="UKI-Cj-Wha"/>
